Q-5/k8s-istio-multiservice-app/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend-dr
spec:
  host: backend
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
